--- a/sass/partials/_order-summary.scss
+++ b/sass/partials/_order-summary.scss
@@ -331,7 +331,6 @@ div.woocommerce .fc-wrapper .fc-checkout-order-review .fc-checkout-order-review_
 		border: $order-summary-border;
 		border-radius: $checkout-substep-border-radius;
 		background-color: $white;
-		overflow: hidden;
 	}
 
 	&:focus {
